# favourite_game

./: README.md
favorite-game/: Anchor.toml  package-lock.json  package.json
favorite-game/programs/favorite-game/: Cargo.toml
favorite-game/programs/favorite-game/src/: lib.rs
favorite-game/tests/: favorite-game.ts
